--- a/angular.json
+++ b/angular.json
@@ -123,5 +123,10 @@
       }
     }
   },
-  "defaultProject": "sensor-monitor"
+  "defaultProject": "sensor-monitor",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
