--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#firebase
+/functions/node_modules
+/functions/lib
+firebase-debug.log
+/.firebase
