--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.4",
     "firebase": "^5.4.0",
+    "firebase-functions": "^2.0.5",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "rxjs": "^6.0.0",
